--- a/index.html
+++ b/index.html
@@ -283,9 +283,44 @@
                         <a>CONTRATAR</a>
                     </div>
                 </div>
+                <div id="servico5" class="servico-content">
+                    <div class="title-content-servico">
+                        <h1>SERVIÇO PERSONALIZADO</h1>
+                    </div>
+                    <div class="icon-content-servico">
+                        <i class="bi bi-pencil"></i>
+                    </div>
+                    <div class="text-content-servico">
+                        <label>Crie seu plano personalizado, onde você poderá adicionar serviços únicos fornecidos pela
+                            CrealityTech.</label>
+                    </div>
+                    <div class="button-content-servico">
+                        <a>CONTRATAR</a>
+                    </div>
+                </div>
             </div>
         </div>
-
+        <div id="contato" class="contato">
+            <div class="container-contato">
+                <div id="text-contato" class="text-contato">
+                    <div class="title-contato">
+                        <h1>CONTATO CREALITY TECH</h1>
+                    </div>
+                    <div class="paragrafo-contato">
+                        <p>A CrealityTech oferece um suporte 100% humanizado e personalizado, onde você terá contato
+                            direto com os desenvolvedores dos serviços. Isso permite que você faça orçamentos de forma
+                            ágil, tire todas as suas dúvidas e receba assistência especializada diretamente de quem
+                            entende do produto. Uma experiência prática, eficiente e próxima do cliente para garantir a
+                            melhor solução para suas necessidades.</p>
+                    </div>
+                </div>
+                <div id="contato-link" class="links-contato">
+                    <a><i id="whats" class="bi bi-whatsapp"></i> (42)98403-3886</a>
+                    <a><i id="insta" class="bi bi-instagram"></i> @creality_tech</a>
+                    <a><i id="mail" class="bi bi-envelope"></i> contato@crealitytech.com.br</a>
+                </div>
+            </div>
+        </div>
     </form>
 </body>
 <script src="script/menu.js"></script>
