--- a/index.html
+++ b/index.html
@@ -300,6 +300,8 @@
                 </div>
             </div>
         </div>
+
+
         <div id="contato" class="contato">
             <div class="container-contato">
                 <div id="text-contato" class="text-contato">
@@ -320,6 +322,14 @@
                     <a><i id="mail" class="bi bi-envelope"></i> contato@crealitytech.com.br</a>
                 </div>
             </div>
+        </div>
+        <footer>
+            <div class="container-footer">
+                <img src="img/folder.svg" alt="">
+            </div>
+        </footer>
+        <div class="header-footer">
+            <label>© 2025 Creality Tech Solutions | Todos os direitos reservados.</label>
         </div>
     </form>
 </body>
