--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
 
                     </div>
-                    <div class="slide">
+                    <div onclick="siteMold()" class="slide">
                         <img src="img/img-site-moldmetais.jpg" alt="Slide 2">
 
                     </div>
