--- a/index.html
+++ b/index.html
@@ -715,8 +715,8 @@
                 </div>
                 <div id="contato-link" class="links-contato">
                     <a onclick="whatsNd()"><i id="whats" class="bi bi-whatsapp"></i> (42)98403-3886</a>
-                    <a onclick="instaCreality()"><i id="insta" class="bi bi-instagram"></i> @creality_tech</a>
-                    <a onclick="mail()"><i id="mail" class="bi bi-envelope"></i> contato@crealitytech.com.br</a>
+                    <a onclick="instaCreality()"><i id="insta" class="bi bi-instagram"></i> @creality__tech</a>
+                    <a onclick="mail()"><i id="mail" class="bi bi-envelope"></i> central@crealitytech.com.br</a>
                 </div>
             </div>
         </div>
