--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div id="number1" class="container-processo">
                     <div class="container-number">
                         <div class="text-processo">
-                            <strong>1 - ENTENDENDO A DOR DO CLIENTE</strong>
+                            <strong>1 - ENTENDENDO A NECESSIDADE DO CLIENTE</strong>
                             <p><strong id="obj">Objetivo:</strong> Primeiro, realizamos uma reunião inicial, seja de
                                 forma presencial ou virtual (via Meet),
                                 conforme a preferência do cliente, para compreender profundamente suas dores e
